package org.redstone.protobuf.msg;

message LoginRequest
{
  optional int64 deviceUID = 1;
}
