syntax = "proto2";
option java_multiple_files = true;
package org.redstone.protobuf.msg;

message PlaceReply
{
  optional int32 result = 1;
}
