syntax = "proto2";
option java_multiple_files = true;
package org.redstone.protobuf.msg;

message PlaceRequest
{
  optional int32 chessNum = 1;
}
